--- a/saitae-web/src/main/webapp/pages/infoPerfil.xhtml
+++ b/saitae-web/src/main/webapp/pages/infoPerfil.xhtml
@@ -24,7 +24,7 @@
                             <p:ajax event="change" listener="#{infoPerfilController.onBlour}"/>
                         </p:password>
 
-                        <p:outputLabel for="c1" value="Contraseña Anterior"/>
+                        <p:outputLabel for="c1" value="Contraseña Nueva"/>
                         <p:password id="c1" required="true" value="#{infoPerfilController.contra1}"
                                     placeholder="Contraseña nueva">
                             <p:ajax event="change" listener="#{infoPerfilController.onBlour}"/>
