evaluación de maestros y grados iniciada. 90% avanzada.

--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -31,7 +31,7 @@
                     <p:column/>
 
                     <h:outputLabel for="user" id="t1" value="Usuario: "/>
-                    <p:inputText id="user" value="#{loginController.user}" required="true"
+                    <p:inputText id="user" value="#{loginController.userL}" required="true"
                                  requiredMessage="No deje vacío el campo usuario." alt="ingrese su NIE/DUI"/>
                     <p:message for="user" showSummary="true"/>
 
