--- a/saitae-web/src/main/webapp/pages/maestroEval.xhtml
+++ b/saitae-web/src/main/webapp/pages/maestroEval.xhtml
@@ -62,10 +62,9 @@
         </h:form>
 
         <p:dialog modal="true" widgetVar="Deval" closeOnEscape="true">
-            <h:form id="h0">
+            <h:form id="h0"> 
                 <t:evMaestro editar="false" 
-                             evMaestro="#{maestroEvalController.evMaSelected}"
-                             guardar="#{maestroEvalController.guardarEval()}"/>
+                             evMaestro="#{maestroEvalController.evMaSelected}"/>
             </h:form>
         </p:dialog>
     </ui:define>
